--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "firebase": "^9.18.0",
     "history": "^5.3.0",
     "react": "^18.2.0",
+    "react-datepicker": "^4.10.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.0.0-beta.0",
     "react-scripts": "5.0.1",
